# midhunatech

./: .gitignore  LICENSE  MANIFEST.in  README.md  USER_GUIDE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
frontend/: index.html  package.json  vite.config.js
frontend/public/: push-sw.js
frontend/src/: App.vue  main.css  main.js
frontend/src/data/: docdata.js  push.js  session.js
frontend/src/router/: index.js
frontend/src/theme/: variables.css
frontend/src/views/: Home.vue  Login.vue  ModuleView.vue  Profile.vue  Settings.vue  Tabs.vue
midhunatech/: __init__.py  hooks.py  install.py  modules.txt  patches.txt
midhunatech/api/: approvals.py  data.py  push.py  pwa.py  reports.py
midhunatech/config/: desktop.py
midhunatech/doctype/midhunatech_pwa_module/: midhunatech_pwa_module.json
midhunatech/public/frontend/: Approvals-B7WWNnUI.js  Checkin-Dqu6mf_m.js  Home-BCSw3fMJ.js  Home-BmduAQTq.js  Home-C_HALBYf.js  Home-Cz_ENC8v.js  Login-FAK0Ym-_.js  Login-cMEk_59X.js  ModuleView-2bSYZoEK.js  ModuleView-C7RqfjWD.js  ModuleView-C_gTSHQK.js  ModuleView-Czvn1jK_.js  ModuleView-DP-28xQU.js  ModuleView-Da1W3LAX.js  ModuleView-cYcOQktS.js  Notifications-BRYSQmkQ.js  Profile-BEIHSUTx.js  Profile-C6_c1WCR.js  Settings-Cn_zPXmm.js  Settings-DQHDOJ4J.js  Tabs-C7qZ2OF5.js  Tabs-Y837qX3F.js  checkin-DZFvONQQ.js  frappe-charts.min.esm-BgNSeE78.js  index.html  index.js  index10.css  sw.js  (+13 more)
midhunatech/setup/: ethanol_modules.py
midhunatech/www/: midhunatech.html  midhunatech.py  midhunatech_status.html  midhunatech_status.py
(+11 files in other folders)
